MORE PROFILING AND MAJOR OPTIMIZATIONS